@@ -4,7 +4,7 @@
        <title>Nemiver - A GNOME C/C++ Debugger</title>
 
        <meta http-equiv="Content-Type"
-             content="text/html; charset=iso-8859-1"/>
+             content="text/html; charset=utf-8"/>
        <link rel="stylesheet"
              media="screen"
              type="text/css"
@@ -102,7 +102,16 @@
     </div>
 
     <div id="bottom">
-        <div id="copyright">Copyright 2008, <a href="http://home.gna.org/nemiver">The Nemiver project</a>.
+        <div id="copyright">Copyright 2008, <a href="http://home.gna.org/nemiver">The Nemiver project</a>. </div>
+        <div>
+             <p>
+                 <a href="http://validator.w3.org/check?uri=referer">
+                     <img src="http://www.w3.org/Icons/valid-xhtml10"
+                          alt="Valid XHTML 1.0 Strict"
+                          height="31"
+                          width="88"/>
+                  </a>
+            </p>
         </div>
     </div>
 </body>
