@@ -1,5 +1,10 @@
 2008-08-24  Dodji Seketeli  <dodji@gnome.org>
 
+	* index.html: Fix encoding specification to make sure the page is
+	  valid xhtml. Add validation checker icon.
+
+2008-08-24  Dodji Seketeli  <dodji@gnome.org>
+
 	* index.html: Slightly changed the name.
 
 2008-07-31  Dodji Seketeli  <dodji@gnome.org>
